[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue_wallet_client"
version = "0.0.1"
authors = [
  { name="Adam Ivansky", email="adam.ivansky@gmail.com" },
]
description = "Bitcoin lightning wallet for python. A Python client for the API of non-custodial Bitcoin Lightning wallet called Blue Wallet. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"