[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blue_wallet_client"
version = "0.0.13"
authors = [
  { name="Adam Ivansky", email="adam.ivansky@gmail.com" },
]
description = "Bitcoin lightning wallet for python. A Python client for the API of custodial Bitcoin Lightning wallet called Blue Wallet. "
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'requests >= 2.6.1',
]

[project.urls]
"Homepage" = "https://github.com/snow884/blue_wallet_client"
"Bug Tracker" = "https://github.com/snow884/blue_wallet_client/issues"
